--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <head>
-  <head></head> <!-- added from remote repo>
+	<head></head> <!-- added from remote repo -->
+	<body></body> <!-- body tag added from local rep -->
 </head>
